methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:27: error: object java.awt.Color is not a value
     faireV(Color); forward; left(); 
            ^